Fix collapsable functionality and cleaning

--- a/hw6/static/styles.css
+++ b/hw6/static/styles.css
@@ -115,10 +115,32 @@ body {font-family: "Lato", sans-serif;}
   transition: 0.3s;
   width: 70%;
     max-height: 100px;
-  border-radius: 5px;
+    border-radius: 5px;
     float: bottom;
     padding: 10px;
     margin: 5px;
+    position: relative;
+}
+
+.card-result-container {
+  width: 100%;
+    height: 100%;
+    position: inherit;
+}
+
+.collapsable-button {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  /*float: right;*/
+  /*margin-left: 5px;*/
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 10px;
+    height: 10px;
+    border: none;
+    background: none;
 }
 
 .card-result:hover {
@@ -143,7 +165,7 @@ body {font-family: "Lato", sans-serif;}
     max-lines: 2;
 }
 
-.card-result-description-container {
+.card-result-description-style {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
